--- a/style.css
+++ b/style.css
@@ -19,6 +19,17 @@ body {
     width: 200px;
     margin: 20px;
     box-shadow: 0 0 7px 2px rgb(53, 53, 53) inset;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 10px;
+    
+}
+
+.readout {
+    font-family: 'Teko', sans-serif; 
+    font-size: 30px;
+    color:rgb(81, 180, 86)
 }
 
 .large-buttons {
@@ -50,7 +61,7 @@ body {
     height: 3em;
 }
 
-.number {
+.number, .modifier {
     background-color: rgb(228, 228, 228);
 }
 
